migrate to Bootstrap 5

--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -1,5 +1,9 @@
 {% extends "pages/template.njk" %}
 
+{% block header %}
+  {{ header(true) }}
+{% endblock %}
+
 {% block navbar %}
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Home") }}
@@ -168,4 +172,8 @@
     {% include "./paper.njk" %}
   </div>
   {% include "./the-team.njk" %}
+{% endblock %}
+
+{% block scripts %}
+  {{ scripts(true, true) }}
 {% endblock %}
