--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -10,7 +10,7 @@
 
 .nav-option {
   font-weight: 600;
-  border-bottom: 4px solid transparent;
+  border-bottom: 3px solid transparent;
   transition: var(--time-mid);
   cursor: pointer;
   font-family: "Montserrat", sans-serif;
@@ -21,7 +21,7 @@
   color: var(--color-text-main);
 
   font-size: 100%;
-  padding-bottom: 12px;
+  padding-bottom: 10px;
 
   &:hover {
     border-bottom: 4px solid var(--color-primary-bg)!important;
@@ -70,7 +70,7 @@
   padding-bottom: 0!important;
   transition: var(--time-mid);
 
-  &.d-block {
+  &.show {
     animation-name: invis;
     animation-duration: var(--time-fast);
   }
