--- a/src/views/universal/_footer-scripts.njk
+++ b/src/views/universal/_footer-scripts.njk
@@ -1,7 +1,11 @@
-{% macro scripts(customJS=true) %}
+{% macro scripts(customJS=true, bs5=false) %}
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
+{% if bs5 %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+{% else %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+{% endif %}
 <!-- tools -->
 <script src="assets/tools/sequence/js/imagesloaded.pkgd.min.js"></script>
 <script src="assets/tools/sequence/js/hammer.min.js"></script>
@@ -40,9 +44,9 @@ $('#homePageBS4Carousel').on('slide.bs.carousel', (e) => {
 
 $('a.dropdown-toggle.nav-option').hover(function() {
   console.log('test')
-  $(this).siblings('.nav-dropdown').addClass('d-block');
+  $(this).siblings('.dropdown-menu').addClass('show');
 }, function() {
-  $(this).siblings('.nav-dropdown').removeClass('d-block');
+  $(this).siblings('.dropdown-menu').removeClass('show');
 });
 
 $('.nav-dropdown').hover(function() {
