--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -31,7 +31,7 @@
           honours and undergraduate students are welcome to join our group.
         </p>
 
-        <img src="assets/img/bio_tech_fall.JPG"  alt="" class="img-fluid my-5 img-round">
+        <img src="http://bioinfocore.usu.edu/raikou/image/bioinfo/bio_tech_fall.JPG"  alt="" class="img-fluid my-5 img-round">
 
         <h2 class="kbl-heading dark">Masters and Honors</h2>
         <p class="kbl-text">
@@ -48,7 +48,7 @@
           </b>
         </p>
 
-        <img src="assets/img/colorful.JPG"  alt="" class="img-fluid my-5 img-round">
+        <img src="http://bioinfocore.usu.edu/raikou/image/bioinfo/colorful.JPG"  alt="" class="img-fluid my-5 img-round">
 
         <h2 class="kbl-heading dark">PhD</h2>
         <p class="kbl-text">
