--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 {% from "universal/_header.njk" import header %}
-{{ header(true) }}
+{{ header() }}
 
 <body>
   {% from "universal/_navbar.njk" import navbar %}
