--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -131,7 +131,7 @@
         {% include "./_contact-form.njk" %}
       </div>
       <div class="col">
-        <div class="embed-responsive embed-responsive-1by1 img-round">
+        <div class="ratio ratio-16x9 img-round">
           <iframe src="http://maps.google.com/maps?q=41.742693,-111.810340&amp;z=15&amp;output=embed" allowfullscreen="" frameborder="0"></iframe>
         </div>
       </div>
