Fix more navbar bugs

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -13,6 +13,6 @@
   --font-weight-medium: 600;
   --font-weight-heavy: 700;
 
-  --navbar-height: 102px;
+  --navbar-height: 7.3rem;
   --mobile-nav-height: 70px;
 }
