--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -21,7 +21,7 @@
   color: var(--color-text-main);
 
   font-size: 100%;
-  padding-bottom: 10px;
+  padding-bottom: 0.8rem;
 
   &:hover {
     border-bottom: 4px solid var(--color-primary-bg)!important;
