--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -38,7 +38,8 @@
                 </div>
               </article>
             </div>
-            <div class="col-md d-none d-md-block">
+            <div class="col-md-1"></div>
+            <div class="ps-5 col-md d-none d-md-block">
                 <div class="education_timeline_wrap">
                     <ol class="ol-timeline ">
                         <li class="tl-item with-icon zoom">
