--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -141,6 +141,7 @@
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
   {{ scripts() }}
+  <script src="assets/js/kbl/contact.js"></script>
 </body>
 
 </html>
