--- a/src/views/pages/contact/_contact-form.njk
+++ b/src/views/pages/contact/_contact-form.njk
@@ -1,8 +1,6 @@
-<form>
-    <input name="name" id="formName" type="text" class="form-control kbl-form" placeholder="Full Name">
-    <input name="email"  id="formEmail" type="email" class="form-control kbl-form" placeholder="Email">
-    <input  name="phone" type="formPhone" class="form-control kbl-form"  placeholder="Phone Number">
-    <textarea name="message"  id="formMessage" class="form-control kbl-form" rows="15" placeholder="Say something to us!"></textarea>
+<input name="name" id="formName" type="text" class="form-control kbl-form" placeholder="Full Name">
+<input name="email"  id="formEmail" type="email" class="form-control kbl-form" placeholder="Email">
+<input  name="phone" id="formPhone" class="form-control kbl-form"  placeholder="Phone Number">
+<textarea name="message"  id="formMessage" class="form-control kbl-form" rows="15" placeholder="Say something to us!"></textarea>
 
-    <button class="btn kbl-btn-1-solid" id="send">Send Message</button>
-</form>
+<button class="btn kbl-btn-1-solid" id="send">Send Message</button>
