--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -32,21 +32,21 @@
 
       <div class="col-12 col-lg-9 overflow-hidden">
         <section class="kbl-tab-selector text-center mb-5" id="pub-selector">
-          <span class="tab-select-option" id="pub">Publications</span>
-          <span class="tab-select-option" id="conf">Conferences</span>
-          <span class="tab-select-option" id="edit">Editorials</span>
+          <span class="tab-select-option {% if (content == 'pub') %}selected{% endif %}" id="pub">Papers</span>
+          <span class="tab-select-option {% if (content == 'conf') %}selected{% endif %}" id="conf">Conferences</span>
+          <span class="tab-select-option {% if (content == 'edit') %}selected{% endif %}" id="edit">Editorials</span>
         </section>
 
         <div class="position-relative">
-          <div id="pub-column" class="sub-column off">
+          <div id="pub-column" class="sub-column {% if (content !== 'pub') %}off{% endif %}">
             {% include './subpages/pubs.njk' %}
           </div>
 
-          <div id="conf-column" class="sub-column off">
+          <div id="conf-column" class="sub-column {% if (content !== 'conf') %}off{% endif %}">
             {% include './subpages/conf.njk' %}
           </div>
 
-          <div id="edit-column" class="sub-column off">
+          <div id="edit-column" class="sub-column {% if (content !== 'edit') %}off{% endif %}">
             {% include './subpages/edit.njk' %}
           </div>
         </div>
