--- a/src/views/components/pub-legend.njk
+++ b/src/views/components/pub-legend.njk
@@ -1,22 +1,22 @@
 {% macro pubLegend() %}
-  <div class="mb-2">
-    <span class="fa-stack fa-2x pub-legend-container" id="dollar">
+  <div class="mb-2 text-center">
+    <span class="fa-stack pub-legend-container" id="dollar">
       <i class="fas fa-square fa-stack-2x"></i>
       <i class="fas fa-dollar-sign fa-stack-1x pub-legend-icon"></i>
     </span>
-    <span class="fa-stack fa-2x pub-legend-container" id="asterisk">
+    <span class="fa-stack pub-legend-container" id="asterisk">
       <i class="fas fa-square fa-stack-2x"></i>
       <i class="fas fa-asterisk fa-stack-1x pub-legend-icon"></i>
     </span>
-    <span class="fa-stack fa-2x pub-legend-container"  id="caret">
+    <span class="fa-stack pub-legend-container"  id="caret">
       <i class="fas fa-square fa-stack-2x"></i>
       <i class="fas fa-angle-up fa-stack-1x pub-legend-icon"></i>
     </span>
-    <span class="fa-stack fa-2x pub-legend-container"  id="underline">
+    <span class="fa-stack pub-legend-container"  id="underline">
       <i class="fas fa-square fa-stack-2x"></i>
       <i class="fas fa-underline fa-stack-1x pub-legend-icon"></i>
     </span>
-    <span class="fa-stack fa-2x pub-legend-container"  id="italic">
+    <span class="fa-stack pub-legend-container"  id="italic">
       <i class="fas fa-square fa-stack-2x"></i>
       <i class="fas fa-italic fa-stack-1x pub-legend-icon"></i>
     </span>
