Add Raghav data

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -214,7 +214,8 @@
     img: "/image/raw/people/raghav/raghav.jpg",
     social: [
       {type: "researchgate", link: "https://www.researchgate.net/profile/Raghav_Kataria"},
-      {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-rk-14458211b"}
+      {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-14458211b/"},
+      {type: "orcid", link: "https://orcid.org/0000-0002-1355-3187/"}
     ]
   }
 %}
