--- a/src/views/components/person-card.njk
+++ b/src/views/components/person-card.njk
@@ -90,5 +90,7 @@
     <a href="{{ social.link }}" target="_blank" rel="noreferrer noopener" class="kbl-icon-{{ social.type }} correct-fa align-middle"><i class="fab fa-soundcloud"></i></a>
   {% elif social.type === 'github' %}
     <a href="{{ social.link }}" target="_blank" rel="noreferrer noopener" class="kbl-icon-{{ social.type }} correct-fa align-middle"><i class="fab fa-github"></i></a>
+  {% elif social.type === 'orcid' %}
+    <a href="{{ social.link }}" target="_blank" rel="noreferrer noopener" class="kbl-icon-{{ social.type }} correct-fa align-middle"><i class="ai ai-orcid-square"></i></a>
   {% endif %}
 {% endmacro %}
