--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -215,7 +215,7 @@
     social: [
       {type: "researchgate", link: "https://www.researchgate.net/profile/Raghav_Kataria"},
       {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-14458211b/"},
-      {type: "orcid", link: "https://orcid.org/0000-0002-1355-3187/"}
+      {type: "orcid", link: "https://orcid.org/0000-0002-1355-3187"}
     ]
   }
 %}
