Change mobile nav

--- a/src/views/universal/_mobile-navbar.njk
+++ b/src/views/universal/_mobile-navbar.njk
@@ -40,11 +40,11 @@
       </section>
 
       <section class="col text-center my-auto">
-        <a href="/news" class="mob-nav-link {{ mobileActiveRoute(activeRoute, 'news') }}">
+        <a href="/publications" class="mob-nav-link {{ mobileActiveRoute(activeRoute, 'publications') }}">
           <div class="icon-container">
             <i class="fas fa-newspaper mob-nav-icon"></i>
           </div>
-          <span class="mob-nav-icon-text">News</span>
+          <span class="mob-nav-icon-text">Publications</span>
         </a>
       </section>
     </div>
