--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -23,6 +23,57 @@
         </section>
 
         <section class="row news-item-container">
+          <a class="news-item col-12" href="/news/newadmin1">
+            <div class="row ps-0">
+              <div class="col-9 pt-1">
+                <span class="date">Mar 21, 2020</span>
+                <h5 class="header">New Undergrad Student: Andrew</h5>
+                <p class="desc">
+                  Andrew Joufrray has joined and will be working on data augmnetation.
+                </p>
+              </div>
+              <div class="col-3 pe-0 my-auto">
+                <img src="{{ RaikouServer }}/image/aspect/people/ajouffray/profile.jpg?a=height&w=6&h=6" class="img-fluid">
+              </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="row news-item-container">
+          <a class="news-item col-12" href="/news/newadmin1">
+            <div class="row ps-0">
+            <div class="col-3 ps-0 my-auto">
+                <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/david.jpg?a=height&w=6&h=6" class="img-fluid">
+              </div>
+              <div class="col-9 pt-1">
+                <span class="date">Mar 21, 2020</span>
+                <h5 class="header">New PhD Student: David</h5>
+                <p class="desc">
+                  David Guevara has joined our team.
+                </p>
+              </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="row news-item-container">
+          <a class="news-item col-12" href="/news/newadmin1">
+            <div class="row ps-0">
+              <div class="col-9 pt-1">
+                <span class="date">Mar 21, 2020</span>
+                <h5 class="header">New Undergrad Student: Kolton</h5>
+                <p class="desc">
+                  Kolton Hauck has joined our team.
+                </p>
+              </div>
+              <div class="col-3 pe-0 my-auto">
+                <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/khauck.jpg?a=height&w=6&h=6" class="img-fluid">
+              </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="row news-item-container">
           <a class="news-item col-12" href="/news/citsatdb">
             <div class="row ps-0">
               <div class="col-3 ps-0 my-auto">
