--- a/src/views/pages/news/news.scss
+++ b/src/views/pages/news/news.scss
@@ -16,6 +16,7 @@ h5.header {
   transition: var(--time-mid);
   cursor: pointer;
   background: #fff!important;
+  margin-bottom: 10px;
 
   &:hover {
     background: #eee!important;
