--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -118,6 +118,23 @@
           <a class="news-item col-12" href="/news/newdeephpi">
             <div class="row ps-0">
               <div class="col-3 ps-0 my-auto">
+                <img src="{{ RaikouServer }}/image/aspect/bioinfo/tools/alfalfa_logo.png?a=height&w=1&h=1" class="img-fluid">
+              </div>
+              <div class="col-9 ps-0 pt-1">
+                <span class="date">Dec 1, 2019</span>
+                <h5 class="header">alfaNET is Here!</h5>
+                <p class="desc">
+                  alfaNET is a host-pathogen interactome tool used in the devlopment of molecular strategies for combating bacterial blight in alfalfa.
+                </p>
+              </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="row news-item-container">
+          <a class="news-item col-12" href="/news/newdeephpi">
+            <div class="row ps-0">
+              <div class="col-3 ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/PAG-2019/g2.jpg?a=height&w=5&h=6" class="img-fluid">
               </div>
               <div class="col-9 ps-0 pt-1">
