--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -25,7 +25,7 @@
       <div class="col-12 col-lg-9 overflow-hidden">
         <section class="row justify-content-center">
           <div class="col-3">
-            <div class="sticky-top">
+            <div class="sticky-top pt-2">
               {% from "components/pub-legend.njk" import pubLegend %}
               <div class="kbl-card py-2 px-3">
                 {{ pubLegend() }}
