Change dates and layout

--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -26,10 +26,10 @@
           <a class="news-item col-12" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col-9 pt-1">
-                <span class="date">Mar 21, 2020</span>
+                <span class="date">May 25, 2021</span>
                 <h5 class="header">New Undergrad Student: Andrew</h5>
                 <p class="desc">
-                  Andrew Joufrray has joined and will be working on data augmnetation.
+                  Andrew Joufrray has joined and will be working on data augmentation.
                 </p>
               </div>
               <div class="col-3 pe-0 my-auto">
@@ -46,7 +46,7 @@
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/david.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
               <div class="col-9 pt-1">
-                <span class="date">Mar 21, 2020</span>
+                <span class="date">Mar 3, 2021</span>
                 <h5 class="header">New PhD Student: David</h5>
                 <p class="desc">
                   David Guevara has joined our team.
@@ -60,7 +60,7 @@
           <a class="news-item col-12" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col-9 pt-1">
-                <span class="date">Mar 21, 2020</span>
+                <span class="date">Feb 3, 2021</span>
                 <h5 class="header">New Undergrad Student: Kolton</h5>
                 <p class="desc">
                   Kolton Hauck has joined our team.
@@ -77,7 +77,7 @@
           <a class="news-item col-12" href="/news/citsatdb">
             <div class="row ps-0">
               <div class="col-3 ps-0 my-auto">
-                <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=3&h=4" class="img-fluid">
+                <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=4&h=4" class="img-fluid">
               </div>
               <div class="col-9 ps-0 pt-1">
                 <span class="date">Jan 11-15, 2020</span>
@@ -121,7 +121,7 @@
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/tools/alfalfa_logo.png?a=height&w=1&h=1" class="img-fluid">
               </div>
               <div class="col-9 ps-0 pt-1">
-                <span class="date">Dec 1, 2019</span>
+                <span class="date">Jul 1, 2021</span>
                 <h5 class="header">alfaNET is Here!</h5>
                 <p class="desc">
                   alfaNET is a host-pathogen interactome tool used in the devlopment of molecular strategies for combating bacterial blight in alfalfa.
@@ -133,17 +133,17 @@
 
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/newdeephpi">
-            <div class="row ps-0">
-              <div class="col-3 ps-0 my-auto">
-                <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/PAG-2019/g2.jpg?a=height&w=5&h=6" class="img-fluid">
-              </div>
-              <div class="col-9 ps-0 pt-1">
+            <div class="row">
+              <div class="col-9 ps-2 pt-3">
                 <span class="date">Dec 1, 2019</span>
                 <h5 class="header">deepHPI is Online!</h5>
                 <p class="desc">
                   To bolster and accelerate research on infectious disease, we have implemented deepHPI.
                   The deepHPI web server is a platform that uses Convolutional Neural Network (CNN)...
                 </p>
+              </div>
+              <div class="col-3 pe-0 my-auto">
+                <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/PAG-2019/g2.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
             </div>
           </a>
